add pooling modules to proto configs

--- a/configs/pspnet_1.0_713_mobilenet_v2.config
+++ b/configs/pspnet_1.0_713_mobilenet_v2.config
@@ -1,10 +1,13 @@
-# Traing baseline non-compressed PSPNet model with crop size of 713x713
-# and initalized from MobileNet V2 classification weights
+# Baseline Training ~ Non-compressed PSPNet with Resnet-50 (v1), Atrous version
+#
+# The model is trained with a crop size of 713x713 and initalized from
+# pre-trained MobileNet V2 classification weights.
 
 model {
     pspnet {
         num_classes: 19
         filter_scale: 1.0
+        pooling_factors: [1.0, 2.0, 3.0, 6.0]
         feature_extractor {
             type: 'dilated_mobilenet'
         }
