--- a/configs/sample_icnet_resnet_v1.config
+++ b/configs/sample_icnet_resnet_v1.config
@@ -10,6 +10,7 @@ model {
     icnet {
         num_classes: MODIFY_THIS_FIELD_WITH_YOUR_VALUE
         filter_scale: 1.0
+        pooling_factors: [1.0, 2.0, 3.0, 4.0]
         feature_extractor {
             type: 'dilated_resnet50'
         }
