--- a/configs/two_stage_icnet_1.0_1025_resnet_v1_stage_1.config
+++ b/configs/two_stage_icnet_1.0_1025_resnet_v1_stage_1.config
@@ -1,7 +1,8 @@
-# STAGE 1 for Pretraining  ~ ICNet with Resnet-50 (v1), Atrous version
+# STAGE 1 for Pre-training  ~ ICNet with Resnet-50 (v1), Atrous version
+#
 # Trained on Cityscapes, initialized from PSPNet50 segmentation checkpoint.
 # User must specify the 'fine_tune_checkpoint' path in the train config block
-#   with the path to a PSPNet50 model checkpoint
+# with the path to a PSPNet50 model checkpoint
 #
 # Training assumed to be on single NVIDIA 1080 Ti.
 
@@ -9,6 +10,7 @@ model {
     icnet {
         num_classes: 19
         filter_scale: 1.0
+        pooling_factors: [1.0, 2.0, 3.0, 4.0]
         feature_extractor {
             type: 'dilated_resnet50'
         }
