--- a/configs/two_stage_icnet_0.5_1025_resnet_v1_stage_2.config
+++ b/configs/two_stage_icnet_0.5_1025_resnet_v1_stage_2.config
@@ -1,11 +1,12 @@
-# STAGE 2 for Retraining  ~ ICNet with Resnet-50 (v1), Atrous version
-# Trained on Cityscapes, initialized from prunned ICNet checkpoint
+# STAGE 2 for Re-training  ~ ICNet with Resnet-50 (v1), Atrous version
+#
+# Trained on Cityscapes, initialized from prunned ICNet checkpoint.
 # User must specify the 'fine_tune_checkpoint' path in the train config block
-#   with the path to a compressed ICNet model checkpoint
+# with the path to a compressed ICNet model checkpoint
 #
 # Note that the crop size and batch size is slightly higher compared to the
-#   first stage since the there will be extra space on the GPU due to the
-#   compresion.
+# first stage since the there will be extra space on the GPU due to the
+# compresion.
 #
 # Training assumed to be on single NVIDIA 1080 Ti.
 
@@ -13,6 +14,7 @@ model {
     icnet {
         num_classes: 19
         filter_scale: 0.5
+        pooling_factors: [1.0, 2.0, 3.0, 4.0]
         feature_extractor {
             type: 'dilated_resnet50'
         }
